# llmtop

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
examples/: probe.rs
media/: demo.tape  record_demo.bat
src/: app.rs  config.rs  lib.rs  main.rs  proxy.rs
src/collectors/: apple.rs  mod.rs  nvidia.rs  ollama.rs
src/pricing/: co2.rs  mod.rs
src/ui/: footer.rs  mod.rs  sparkline.rs  table.rs
